mvc game e form with simple_form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
   </head>
 
   <body>
-    <%= yield %>
-  </body>
 
-  <p class="notice"><%= notice %></p>
+  <%= yield %>
+
+  <!-- Messaggi - Alert e Notice -->
   <p class="alert"><%= alert %></p>
+  <p class="notice"><%= notice %></p>
+  </body>
 </html>
