--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -121,34 +121,11 @@
 <body>
 
 <div class="container">
-  <h1>Benvenuto nel Gioco della Vita!</h1>
-  <p>Il mondo è costituito da una griglia bidimensionale di cellule, dove ogni cellula è viva o morta.<br>
-    Supponiamo che la griglia sia finita e che non possa esistere vita al di fuori dei bordi.<br>
-    Data una generazione di input, l'obiettivo è quello di calcolare la generazione successiva.</p>
+  <h1>Sei pronto?</h1>
+  <p>Mettiti comodo e goditi la generazione del Gioco della Vita secondo le tue regole.</p>
 
-  <p><strong>Per il calcolo della generazione successiva si seguono le seguenti regole:</strong></p>
-  <ul class="rules-list">
-    <li><span class="rule-number">1)</span> Ogni cellula viva con meno di due vicini vivi muore.</li>
-    <li><span class="rule-number">2)</span> Ogni cellula viva con due o tre vicini vivi sopravvive alla generazione successiva.</li>
-    <li><span class="rule-number">3)</span> Ogni cellula viva con più di tre vicini vivi muore.</li>
-    <li><span class="rule-number">4)</span> Ogni cella morta con esattamente tre vicini vivi diventa una cella viva.</li>
-  </ul>
 
-  <%= simple_form_for @game, url: games_path, method: :post, html: { class: 'game-form' } do |f| %>
-    <div class="form-group">
-      <%= f.label :number_of_generations, "Numero Generazioni", class: 'form-label', min: 1 %>
-      <%= f.number_field :number_of_generations, class: 'form-control', placeholder: "Inserisci il numero di generazioni" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :input_file, "Carica il File", class: 'form-label' %>
-      <%= f.file_field :input_file, class: 'form-control', required: true %>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit "Crea la griglia", class: "btn btn-primary" %>
-    </div>
-  <% end %>
+  <%= button_to 'Avvia la generazione', '#', method: :post, class: 'btn' %>
 </div>
 <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn' %>
 <p><a href="<%= root_path %>" class="btn btn-back">Torna alla Home</a></p>
